Added check for weight

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,6 +57,7 @@ body {
  background-color: #FFFFFF;
  -webkit-font-smoothing: antialiased;
   height: 100%;
+  overflow-x: hidden;
 }
 
 // Pairwise comparison styling
