--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -1,5 +1,3 @@
-
-
 * {
   font-family: 'pragmatica', sans-serif;
   font-style: normal;
@@ -135,6 +133,11 @@ a:hover
   margin-bottom: 0.5vh;
 }
 
+.break-container {
+  width: 100vw;
+  position: relative;
+  left: calc(-1 * (100vw - 100%) / 2);
+}
 
 /* END OF Login */
 
