Features added by users seperated by company/personal status on feature selection page

--- a/app/views/pairwise_comparisons/_categorical_company_add.html.erb
+++ b/app/views/pairwise_comparisons/_categorical_company_add.html.erb
@@ -106,7 +106,7 @@
       let lower = 0;
 
       $.ajax({
-        url: "/features?cat="+cat+"&name="+name+"&upper="+upper +"&lower="+lower +"&opts="+options+"&category="+categor +"&description="+cati,
+        url: "/features?cat="+cat+"&name="+name+"&upper="+upper +"&lower="+lower +"&opts="+options+"&category="+categor +"&description="+cati+"&company="+"true",
         type: "post",
         success: function(){
           console.log('Saved Successfully');
