--- a/app/views/pairwise_comparisons/new_how.html.erb
+++ b/app/views/pairwise_comparisons/new_how.html.erb
@@ -3,8 +3,8 @@
  <!-- Modal content -->
  <div class="modal-content">
    <span class="close">&times;</span>
-   <%= render partial: 'categorical_add.html.erb' %>
-   <%= render partial: 'continuous_add.html.erb' %>
+   <%= render partial: 'categorical_company_add.html.erb' %>
+   <%= render partial: 'continuous_company_add.html.erb' %>
 
    <div id = "modal_cont">
    <h4 style = "color:#3d6ab1;font-weight:bold"> Add Your Own Feature</h4>
