--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -1,8 +1,6 @@
 <p id="notice"><%= notice %></p>
 
 
-
-
 <%= render partial: 'page_1.html.erb' %>
 <%= render partial: 'page_2.html.erb'%>
 <%= render partial: 'done.html.erb'%>
@@ -17,6 +15,7 @@
      $("#pg_2").css('display', 'none');
      $("#titulo").html("Social Ranking");
      $("#aller_encompassing").css('display', 'block');
+     $("#prompt").html("For the scenario set below, please assume the role of the algorithm and decide which driver should be matched with an incoming potential request ping. Please assume that the drivers are in the same general area, and that the number of customers in demand and traffic conditions in the drivers’ area have no effect on your decision. Based on the information you believe the algorithm should consider when assigning drivers to request pings, please choose which driver the algorithm should assign the request ping to. The information about each driver below are features you previously chose that are applicable to these sets of scenarios.")
  });
 </script>
 
@@ -25,10 +24,12 @@
 
 <div id = "aller_encompassing" style = "display:none;">
 <h3 id = "titulo" style = "color:#3d6ab1;font-weight:bold;margin-left:15%;"> Personal Preference </h3>
-<h6 id = "counter" style = "float:right;margin-top:-4%;margin-right:4%;font-size:2em;font-weight:lighter;color:grey;"> 1/25 </h6>
+<h6 id = "counter" style = "float:right;margin-top:-4%;margin-right:4%;font-size:2em;font-weight:lighter;color:grey;">
+1/<%= @num_pairs %>
+</h6>
 <hr style="color: white;border-width: 1px;overflow:visible;width: 100%;"/>
 <br/>
-<p style="margin-left:15%;color:black;width:70%;font-size:1.5em;line-height:22pt;font-weight:normal;">
+<p id="prompt" style="margin-left:15%;color:black;width:70%;font-size:1.5em;line-height:22pt;font-weight:normal;">
   For the scenario set below, please assume that you have your app open and the algorithm notifies
   you of two potential requests in your area. Please assume that the number of customers in demand
   and traffic conditions in your area have no effect on your decision. Based on the information you
@@ -51,7 +52,7 @@
       <div class="card ">
         <div class="card-content">
           <h5 style = "color:#3d6ab1"> Scenario A </h5>
-          <% if counter_1 < 25 %>
+          <% if counter_1 < @num_pairs %>
             <% counter = 0 %>
             <% @feats.size.times do %>
              <%  puts @feats.map{|n| n.category}.inspect %>
@@ -83,7 +84,7 @@
       <div class="card ">
         <div class="card-content">
           <h5 style = "color:#3d6ab1"> Scenario B </h5>
-          <% if counter_1 < 25 %>
+          <% if counter_1 < @num_pairs %>
             <% counter = 0 %>
             <% @feats.size.times do %>
                 <p style = "font-weight:bold;font-size:1.35em;">  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
@@ -194,6 +195,7 @@ Next Scenario
 
 
   <script type="text/javascript">
+    var num_pairs = <%= @num_pairs %>;
     function isWhitespaceOrEmpty(text) {
       return !/[^\s]/.test(text);
     }
@@ -225,13 +227,13 @@ Next Scenario
         }
       });
 
-      if (prev == 49)
+      if (prev == 2*num_pairs - 1)
       {
         $("#aller_encompassing").css('display', 'none')
         $("#pg_3").css('display', 'block');
         return -1;
       }
-      if (prev == 24)
+      if (prev == num_pairs - 1)
       {
         $("#aller_encompassing").css('display', 'none')
         $("#pg_2").css('display', 'block');
@@ -242,7 +244,7 @@ Next Scenario
       $('.f-' + `${first+prev}`).css('display', 'none')
       $('.container-' + `${first+prev+1}`).css('display', 'block')
       $('.f-' + `${first+prev+1}`).css('display', 'block')
-      $("#counter").html(`${((prev+1)%25)+1}/25`)
+      $("#counter").html(`${((prev+1)%(num_pairs))+1}/${num_pairs}`)
 
     });
 
