--- a/app/views/pairwise_comparisons/new.html.erb
+++ b/app/views/pairwise_comparisons/new.html.erb
@@ -61,11 +61,11 @@ the time a payment is issued. </p> <br / >
 <div class = "contain" style = "display:none">
 <h1 id = "feat_select" style = "margin-left:10%;color:#3d6ab1" >Feature Selection</h1> <p style ="font-weight:lighter;font-size:2.3em;color:#3d6ab1;display:inline;float:right;margin-top:-3%;margin-right:10%;"> About Survey Completed </p>
 <hr id = "hhr">
-<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:17pt;font-weight:normal;" > 
-  Whenever you open your company’s app and start driving, an in-app algorithm works to match 
+<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:17pt;font-weight:normal;" >
+  Whenever you open your company’s app and start driving, an in-app algorithm works to match
   you with potential customers in your given area. This algorithm has two main goals:
 </p>
-<ul style = "margin-left:10%;color:black;width:80%;" > 
+<ul style = "margin-left:10%;color:black;width:80%;" >
   <li class='bullet'>
     - Provide rides/deliveries to customers when needed
   </li>
@@ -73,16 +73,16 @@ the time a payment is issued. </p> <br / >
     - Maximizing drivers’ amounts of trips on the system to maximize drivers’ earnings
   </li>
 </ul>
-<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:17pt;font-weight:normal;" > 
+<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:17pt;font-weight:normal;" >
  The boxes below contain features we believe your company’s algorithm
  uses to match drivers with incoming requests. Based on your experiences
- driving for your company, <strong>please select any features that you believe your
- company’s algorithm currently considers when matching drivers with requests.</strong>
+ driving for your company, <b>please select any features that you believe your
+ company’s algorithm should consider when matching drivers with requests.</b>
  For your selected features, please use the sliders on the right to determine
- how much importance you believe the algorithm places on each factor. If there
- are features not listed below that you think the algorithm uses, please 
+ how much importance you believe the algorithm should place on each factor. If there
+ are features not listed below that you think the should algorithm use, please
  add your own at the bottom of the page.
- Please assign the level of importance to these additional features. 
+ Please assign the level of importance to these additional features.
 </p>
 <table class = "striped highlight" id = "feat" style = "color: #515151;margin-left:10%;margin-right:5%;width:80%;">
     <thead>
