--- a/app/views/pairwise_comparisons/_page_1.html.erb
+++ b/app/views/pairwise_comparisons/_page_1.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div id = "pg_1" class="container">
 <h1 id = "feat_select" style = "color:#3d6ab1" >Pairwise Comparsion Part 1/2</h1>
 <hr style="margin-left: -50%; margin-right: -50%;">
 <br>
